# COS214_WarProject

./: .gitignore  Action.cpp  Action.h  Aggressive.cpp  Aggressive.h  AlliedFactory.cpp  AlliedFactory.h  AlliedInfantry.cpp  AlliedInfantry.h  AlliedOwned.cpp  AlliedOwned.h  AlliedPowers.cpp  AlliedPowers.h  AlliedTank.cpp  AlliedTank.h  AmmoDepoFactory.cpp  AmmoDepoFactory.h  AmmoDeposit.cpp  AmmoDeposit.h  AxisFactory.cpp  AxisFactory.h  AxisInfantry.cpp  AxisInfantry.h  AxisOwned.cpp  AxisOwned.h  AxisPowers.cpp  AxisPowers.h  AxisTank.cpp  AxisTank.h  Bog.cpp  Bog.h  Bombardment.cpp  Bombardment.h  CMakeLists.txt  Caretaker.cpp  Caretaker.h  Cell.cpp  Cell.h  CellFeatures.cpp  CellFeatures.h  (+64 more)
Composite_Test/: CMakeLists.txt  Composite_Fixtures.h  Composite_Test_Config.h.in  Composite_Test_Fixtures.h  Composite_Test_main.cpp
Example_Test/: CMakeLists.txt  Example_Test_main.cpp
Memento_Test/: CMakeLists.txt  Memento_Test_Fixtures.h
Participants_Test/: CMakeLists.txt  Participants_Test_Fixtures.h
System/: Action.h  Aggressive.h  AlliedFactory.cpp  AlliedFactory.h  AlliedInfantry.cpp  AlliedInfantry.h  AlliedPowers.cpp  AlliedPowers.h  AlliedTank.h  AmmoDepoFactory.cpp  AmmoDeposit.cpp  Bog.cpp  Bog.h  Bombardment.cpp  Bombardment.h  CMakeLists.txt  Cell.cpp  Cell.h  CellFeatures.cpp  CellFeatures.h  CentralFactory.cpp  CentralFactory.h  CentralInfantry.cpp  CentralInfantry.h  CentralPowers.cpp  ColorCodes.h  Defensive.h  Enumerations.h  Flatlands.cpp  FuelDepoFactory.cpp  FuelDepoFactory.h  FuelDeposit.cpp  Infantry.h  InfantryDamage.cpp  InfantryDamage.h  MilitaryUnit.cpp  Mining.cpp  Mining.h  README.md  SaveState.h  (+14 more)
System/Composite_Test/: Composite_Test_Fixtures.h  Composite_Test_main.cpp
System/Example_Test/: Fixtures_Template.h  Test_Template.cpp
System/Memento_Test/: Memento_Test_Fixtures.h  Memento_Test_main.cpp
System/Participants_Test/: Participants_Test_main.cpp
Test_Example/: CMakeLists.txt  Fixtures_Example.h  test_main_Example.cpp
